<?xml version="1.0"?>
<package>
  <name>agvs_gazebo</name>
  <version>0.1.2</version>
  <description>The agvs_gazebo package. Launch files and worlds to run Gazebo.</description>

 
  <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <license>BSD</license>
 
  <url type="website">http://wiki.ros.org/agvs_gazebo</url>
  <url type="repository">https://github.com/RobotnikAutomation/agvs_sim</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/agvs_sim/issues</url>

  <author email="rguzman@robotnik.es">Roberto Guzmán</author>


 
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>agvs_description</run_depend>
  <run_depend>agvs_pad</run_depend>
  <run_depend>agvs_robot_control</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>velocity_controllers</run_depend>
  <run_depend>effort_controllers</run_depend>


  <export>

  </export>
</package>
