<?xml version="1.0"?>
<package>
  <name>agvs_sim</name>
  <version>0.1.3</version>
  <description>agvs Gazebo simulation packages</description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/agvs_sim</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/agvs_sim/issues</url>

  <author email="rguzman@robotnik.es">Roberto Guzm치n</author>
  <author email="rnavarro@robotnik.es">Rom치n Navarro</author>
  
  <maintainer email="rguzman@robotnik.es">Roberto Guzm치n</maintainer>
  <maintainer email="rnavarro@robotnik.es">Rom치n Navarro</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>agvs_gazebo</run_depend>
  <run_depend>agvs_robot_control</run_depend>
  <run_depend>agvs_control</run_depend>
  <run_depend>agvs_sim_bringup</run_depend>

  <export><metapackage/></export>

</package>
