<?xml version="1.0"?>
<package>
  <name>agvs_sim_bringup</name>
  <version>0.1.3</version>
  <description>The agvs_sim_bringup package. It contains multiple launch files to perform different tasks, from creating a map with gmapping to launching amcl.</description>


  <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <license>BSD</license>


  <url type="website">http://wiki.ros.org/agvs_sim_bringup</url>
  <url type="repository">https://github.com/RobotnikAutomation/agvs_sim</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/agvs_sim/issues</url>


  <author email="rnavarro@robotnik.es">Román Navarro</author> 

  <buildtool_depend>catkin</buildtool_depend>


  <export>
  </export>
</package>
